minor css fix for small window sizes with horizontally overflowing content. This fix allows sideways scrolling of content

--- a/vulcanforge/common/static/css/core_parts/layout.scss
+++ b/vulcanforge/common/static/css/core_parts/layout.scss
@@ -201,7 +201,7 @@ body.has-related-artifacts #content-columns {
 }
 
 body.has-sidebar #main-column {
-  padding-right: $sidebar-width;
+  margin-right: $sidebar-width;
 }
 
 .float-33 {
